objects/school__c.object
<CustomObject>
    <fields>
        <fullName>School_address__c</fullName>
        <label>School_address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_email__c</fullName>
        <label>School_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>School_phone__c</fullName>
        <label>School_phone</label>
        <type>Phone</type>
    </fields>
    <label>school</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>school Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>